[project]
name = "SimbioReader"
version = "0.1.1"
description="Python Reader for the data from SIMBIO-SYS instrument suite on-board the ESA mission BepiColombo"
dependencies = [
    "numpy",
    "pandas",
    "rich",
    "update-checker",
    'importlib-metadata; python_version>"3.10"',
]

authors = [{name="Romolo Politi", email ="Romolo.Politi@inaf.it" }]
license = {text = "GNU GPL ver3"} 
readme = "README.md"

keywords = ["data reader", "Space Mission", "BepiColombo", "SIMBIO-SYS"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Repository = "https://github.com/SIMBIO-SYS/SimbioReader"

[project.optional-dependencies]
docs = ["sphinx",
    "myst_parser",
    "pydata_sphinx_theme",
    "sphinx_markdown_tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid"
  ]

[project.scripts]
simbioPhases = "SimbioReader.externals:simbioPhases"
hricFilters = "SimbioReader.externals:hricFilters"
stcFilters = "SimbioReader.externals:stcFilters"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

